--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,4 @@
-
+<h1 style="text-align: center">List Students (<%=@students.count %>)</h1><br>
 
 <%if @students.blank? %>
   <p>There are no students</p>
