--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,3 +2,4 @@
 <h1>Add a new student</h1>
 
 <%=render 'form', student: @student %>
+<%= link_to '< Back', students_path ,class: "btn btn-warning"%>
