--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,3 +1,4 @@
 
 <h1>Student: <%=@student.name.titleize %></h1>
 <%=render 'form', student: @student %>
+<%= link_to '< Back', students_path ,class: "btn btn-warning"%>
