--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -23,5 +23,5 @@
 
 
 <%end %>
-<%= link_to '+ New Student', new_student_path ,class: "btn btn-success btn-lg"%>
+<%= link_to '+ New Student', new_student_path ,class: "btn btn-success"%>
 
